# ML-Seizure-Detection

./: LICENSE  README.md  annotate_seizure.py  main.py  modelBuild.py  pyproject.toml
Data_Processing/: 00000116_s010_t002.edf  00000124_s008_t003.edf  __init__.py  pre_test.py  prepreprocessing.py  preprocessing.py
Feature_Extraction/: __init__.py  featureGroup1.py  featureGroup2.py  feature_test.py  runFeatureMetrics.py  test_Feature_Extraction.py
ML_Model/: __init__.py  modelBuild.py  model_test.py
Test module/: Tests.py
dataset/: 9260969_20160212_eg.txt
dataset/s003_2015_12_28/: 00000015_s003_t002.edf  5483367_20151228_eg.txt
dataset/s004_2016_09_26/: 00000086_s004_t000.edf  23285901_20160926_eg.txt
