[tool.poetry]
name = "ml-seizure-detection"
version = "0.1.0"
description = "Seizure Detection using Machine Learning"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ml_seizure_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
pandas = "^1.5.0"
scikit-learn = "^1.1.2"
matplotlib = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
